# flatpak-preinstall-prototype

./: README.md  meson.build  meson_options.txt
.github/workflows/: main.yml
data/: meson.build  system.service  user.service
src/: Application.vala  meson.build
